--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "dependencies": {
+    "@prisma/client": "^5.20.0",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.4",
     "@types/qrcode": "^1.5.5",
     "@types/qrcode-terminal": "^0.12.2",
+    "prisma": "^5.20.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
