--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.665.0",
     "@prisma/client": "^5.20.0",
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-sdk": "^2.1691.0",
@@ -8,6 +9,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
+    "ffmpeg-static": "^5.2.0",
+    "file-type": "^19.5.0",
+    "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
@@ -15,17 +19,20 @@
     "passport-google-oauth20": "^2.0.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
+    "uuid": "^10.0.0",
     "whatsapp-web.js": "^1.26.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.0",
+    "@types/fluent-ffmpeg": "^2.1.26",
     "@types/node": "^22.7.4",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/qrcode": "^1.5.5",
     "@types/qrcode-terminal": "^0.12.2",
+    "@types/uuid": "^10.0.0",
     "prisma": "^5.20.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
