--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.665.0",
     "@prisma/client": "^5.20.0",
+    "@types/node-fetch": "^2.6.11",
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
