--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -21,6 +21,7 @@
     "passport-google-oauth20": "^2.0.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.8.0",
     "uuid": "^10.0.0",
     "whatsapp-web.js": "^1.26.0",
     "ws": "^8.18.0"
