--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,7 +14,9 @@
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-split": "^2.0.14"
+    "react-split": "^2.0.14",
+    "socket.io-client": "^4.8.0",
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
