Se hacen actualizaciones tanto en el bback como en el front para poder hacer hactualizaciones de la informacion del lead

--- a/FrontEnd/.env.example
+++ b/FrontEnd/.env.example
@@ -1,5 +1,5 @@
-# Enpoints del server
 VITE_ENPOINT_SENDER_MESSAGE=
 VITE_ENPOINT_GET_INFO_AGENTES=
-#AWS
 VITE_ENPOINT_AWS_BUCKED=
+VITE_WEBSOCKET_URL=
+VITE_ENPOINT_SERVER_UPLOAD_LEAD=
