--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -15,6 +15,7 @@
     "file-type": "^19.5.0",
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
@@ -32,6 +33,7 @@
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.0",
     "@types/fluent-ffmpeg": "^2.1.26",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.7.4",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.16",
