se hace el archivo de configuraciion para el puerto de react

--- a/FrontEnd/.env.example
+++ b/FrontEnd/.env.example
@@ -3,3 +3,4 @@ VITE_ENPOINT_GET_INFO_AGENTES=
 VITE_ENPOINT_AWS_BUCKED=
 VITE_WEBSOCKET_URL=
 VITE_ENPOINT_SERVER_UPLOAD_LEAD=
+VITE_ENPOINT_SERVER_TIPO_GESTION=
