Se hace funcionalidad de auth con ggogle y integracion con localstorage para no sobre cargar la pagina

--- a/FrontEnd/.env.example
+++ b/FrontEnd/.env.example
@@ -2,5 +2,10 @@ VITE_ENPOINT_SENDER_MESSAGE=
 VITE_ENPOINT_GET_INFO_AGENTES=
 VITE_ENPOINT_AWS_BUCKED=
 VITE_WEBSOCKET_URL=
-VITE_ENPOINT_SERVER_UPLOAD_LEAD=
-VITE_ENPOINT_SERVER_TIPO_GESTION=
+
+# Google Claud
+VITE_CLIENT_ID_GOOGLE=
+VITE_CUSTOM_ID_GOOGLE=
+
+ENPOINT_LOGIN=
+ENPOINT_CALLBACK=
